...
    ) {
        val displayedImage =
            if (viewModel.itemData.image.isEmpty()) ImageManager.PLACEHOLDER_IMAGE_STRING else viewModel.itemData.image
        // image of the item
        GlideImage(
            model = Uri.parse(displayedImage),
            contentDescription = if (viewModel.itemData.image.isEmpty()) "No image provided" else "Item image",
            modifier = Modifier.fillMaxWidth(),
            alignment = Alignment.Center
        )
    }
}

...
        // Name of item
        CustomEditText(
            fieldLabel = "Item name",
            fieldContent = viewModel.itemData.itemName,
            leftIcon = Icons.Outlined.Edit,
            isEditable = false,
            testTag = "ViewFoundName"
        )
        HorizontalDivider(thickness = 1.dp)

        // category and subcategory
        CustomEditText(
            fieldLabel = "Category",
            fieldContent = viewModel.itemData.category + ", " + viewModel.itemData.subCategory,
            leftIcon = Icons.Outlined.Folder,
            isEditable = false,
            testTag = "ViewFoundCategory"
        )
        HorizontalDivider(thickness = 1.dp)

        // date and time
        CustomEditText(
            fieldLabel = "Date and time",
            fieldContent = DateTimeManager.dateTimeToString(viewModel.itemData.dateTime),
            leftIcon = Icons.Outlined.CalendarMonth,
            isEditable = false,
            testTag = "ViewFoundDateTime"
        )
        HorizontalDivider(thickness = 1.dp)

        // color
        val colorText = viewModel.itemData.color.joinToString(", ")
        Row(
...
            Box(modifier = Modifier.weight(1f)) {
                CustomEditText(
                    fieldLabel = "Color",
                    fieldContent = colorText,
                    leftIcon = Icons.Outlined.Palette,
                    isEditable = false,
                    testTag = "ViewFoundColor"
                )
            }

            // display colors in circles
            for (colorString in viewModel.itemData.color) {
                Icon(
...
        // brand (Optional)
        CustomEditText(
            fieldLabel = "Brand",
            fieldContent = if (viewModel.itemData.brand.isNotEmpty()) viewModel.itemData.brand else "(Not provided)",
            leftIcon = Icons.Outlined.Title,
            isEditable = false,
            testTag = "ViewFoundBrand"
        )
        HorizontalDivider(thickness = 1.dp)

        // description (Optional)
        CustomEditText(
            fieldLabel = "Description",
            fieldContent = if (viewModel.itemData.description.isNotEmpty()) viewModel.itemData.description else "(Not provided)",
            leftIcon = Icons.Outlined.Description,
            isEditable = false,
            testTag = "ViewFoundDescription"
        )
        HorizontalDivider(thickness = 1.dp)

        // security question - whether it exists
        CustomEditText(
            fieldLabel = "Security question",
            fieldContent = if (viewModel.itemData.securityQuestion.isEmpty()) "No" else "Yes",
            isEditable = false,
            leftIcon = Icons.Outlined.Lock,
            testTag = "ViewFoundSecurityQuestion"
        )
    }
}

@Composable
fun LocationData(
...

                CustomEditText(
                    fieldLabel = "User",
                    fieldContent = if (viewModel.itemData.user.userID == UserManager.getUserID()) "$userDisplayName (You)" else userDisplayName,
                    leftIcon = Icons.Outlined.AccountCircle,
                    isEditable = false,
                    testTag = "ViewFoundUser"
                )
            }

            // contact user button and dialog, when the user is not the current user
            if (viewModel.itemData.user.userID != UserManager.getUserID()) {
                CustomButton(
...
        // time posted
        CustomEditText(
            fieldLabel = "Time posted",
            fieldContent = DateTimeManager.dateTimeToString(viewModel.itemData.timePosted),
            leftIcon = Icons.Outlined.CalendarMonth,
            isEditable = false,
            testTag = "ViewFoundTimePosted"
        )
        HorizontalDivider(thickness = 1.dp)
    }
}


...
                    )
                }

                // if the status is 1 or 2, display this
                if (inPreview || viewModel.itemData.status == 1 || viewModel.itemData.status == 2) {
                    CustomButton(
                        text = "View claims for this item",  // there can only be one claim for each lost item
                        type = ButtonType.FILLED,
                        onClick = {
                            // start new claim list activity
                            val intent = Intent(context, ViewClaimListActivity::class.java)

                            // pass only the found item to the claim list activity
...
                    )
                }

                // if the status is 0, display the deletable option
                if (inPreview || viewModel.itemData.status == 0) {
                    CustomButton(
                        text = "Delete item",
                        type = ButtonType.WARNING,
                        onClick = {
                            // open delete dialog
                            viewModel.isDeleteDialogShown.value = true
                        }
                    )
...
